typo: Investigation -> Investigating

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Jupyter notebook files and sample data for PyNoCo talk on Investigation data.
+Jupyter notebook files and sample data for PyNoCo talk on Investigating Data.
 
 You need:
 
